quoin-macros-tests/tests/ui/render_unknown_element_fail.rs
use quoin_macros::quoin_render;

fn main() {
    quoin_render! {
        foobar(class: "x") { "hello" }
    };
}
